clean up logger and controller
