# docs/swagger.json
@@ -7,5 +7,61 @@
         "version": "1.0"
     },
     "host": "\u003csome url\u003e",
-    "paths": {}
+    "paths": {
+        "/auths": {
+            "post": {
+                "description": "Sends an email to the address passed in with a verification code to verify their email",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Send a Verification Code",
+                "parameters": [
+                    {
+                        "description": "Email address to send code to",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.AuthEmail.AuthEmailInputStruct"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Expiry time of code",
+                        "schema": {
+                            "$ref": "#/definitions/routes.AuthEmail.AuthEmailOutputStruct"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "routes.AuthEmail.AuthEmailInputStruct": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.AuthEmail.AuthEmailOutputStruct": {
+            "type": "object",
+            "properties": {
+                "codeExpiry": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
